<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_adicionar"
        android:title="@string/menu_add"
        android:icon="@drawable/ic_add_24"
        app:showAsAction="ifRoom" />
    
    <item
        android:id="@+id/action_ordenacao"
        android:icon="@drawable/ic_sort_ascending"
        android:title="@string/settings_sort_order"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_restaurar"
        android:title="@string/settings_restore_defaults"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_sobre"
        android:title="@string/menu_about"
        app:showAsAction="never" />
    
</menu>